deploy/keycloak/init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container
spec:
  containers:
    - name: busybox
      image: busybox
      volumeMounts:
        - name: workdir
          mountPath: /usr/share/nginx/html
  # These containers are run during pod initialization
  dnsPolicy: Default
  volumes:
    - name: workdir
      emptyDir: {}
