deploy/keycloak/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  #host: keycloak-batur.apps.ocp.mydomain.com
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: keycloak
    weight: 100
  wildcardPolicy: None
